# risalah-saloqum

./: ATTRIBUTION.md  CITATION.cff  CONTRIBUTING.md  CORPUS.lock.yaml  CORPUS.manifest.json  LICENSE  README.md  README_MANIFESTO.md  SECURITY.md  ai-faq.jsonl  corpus.jsonld  llms-full.txt  llms.txt  mkdocs.yml  requirements.txt
.github/scripts/: generate_sitemap.py
.github/workflows/: pages.yml  seo-llm-gold-standard.yml  validate-corpus-lock.yml  validate-portal.yml
docs/: change-log.md  corpus.jsonld  deploy-huggingface.md  distribution-strategy.md  faq.md  forensic-audit.md  glossary.md  index.md  robots.txt  start-here.md  teleological-blueprint.md  teleological-controls.md
docs/llm/: index.md  readiness.md
docs/metadata/: discovery.md  manifest.md  semantic-graph.md  seo-llm-strength-standard.md  structured-data.md  universal-template.md
docs/releases/: index.md
docs/telemetry/: index-observability-ledger.md  observability-metrics.csv
docs/volumes/: t1-ontology.md  t2-epistemology.md  t3-axiology.md  t4-methodology.md
tools/: audit_repo_scripts.py  sync_observability_ledger.py  sync_portal_assets.py  sync_release_assets.py  validate_corpus_lock.py  validate_jsonld.py  validate_portal_assets.py  validate_release_artifacts.py  validate_semantic_readiness.py  validate_seo_llm_standards.py  validate_site_entrypoints.py
tools/mkdocs_sitemap/: README.md  pyproject.toml
tools/mkdocs_sitemap/mkdocs_sitemap/: __init__.py  plugin.py
volumes/T1-ontology/: README.md
volumes/T2-epistemology/: README.md
volumes/T3-axiology/: README.md
(+13 files in other folders)
