[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-sitemap"
version = "0.0.1"
description = "Local MkDocs sitemap plugin for Risalah Saloqum."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.entry-points."mkdocs.plugins"]
sitemap = "mkdocs_sitemap.plugin:SitemapPlugin"
